# Yc

./: .clang-format  .gitconfig  .gitmodules  CMakeLists.txt  NOTICE.md  README.md
docs/: CMakeLists.txt  DOCS.md  README.md  doxyfile.in  main.md
include/: CMakeLists.txt  README.md  yc.h
include/yc/: CMakeLists.txt  assert.h  error.h  mem.h  opt.h  stdio.h  string.h  unistd.h  utils.h
lib/: CMakeLists.txt
scripts/: README.md
src/: CMakeLists.txt  README.md  assert.c  mem.c  yc.c
src/tests/: CMakeLists.txt  README.md  yc_test.c
